k8s/pocketbase/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocketnow
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kustomize
  template:
    metadata:
    spec:
      containers:
      - name: pocketnow-db
        image: registry.dev.clarkezone.dev/pocketbase:latest
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /data
            name: db-volume
        ports:
        - containerPort: 8080
      volumes:
        - name: db-volume
          persistentVolumeClaim:
            claimName: db-pvc
