k8s/pocketbase/pb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pb-service
spec:
  selector:
    app: pocketnow-db
  ports:
    - name: "http"
      port: 8080
