k8s/pocketbase/pb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pb-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: https
    cert-manager.io/cluster-issuer: cloudflare
spec:
  tls:
  - hosts:
    - pocketnow-db.dev.clarkezone.dev
    secretName: pb-stage-tls
  rules:
  - host: pocketnow-db.dev.clarkezone.dev
    http:
      paths:
      - backend:
          service:
            name: pb-service
            port:
              number: 8080
        path: /
        pathType: Prefix
